Made countdown count to December 1st 2017

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YAX Coming Soon HTML5/CSS3 Free Template</title>
+    <title>Coming Soon</title>
     <meta name="description" content="YAX Coming Soon HTML5/CSS3 Free Template by Morteza Aghili" />
     <meta name="keywords" content="HTML5, css3, Free Template, web design, flat design, inspiration, responsive, svg, pseudo-elements" />
     <meta name="author" content="Morteza Aghili" />
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <p>2015 - YourAwesomeSite</p>
+                    <p>2017 - Pallman.us</p>
 
                     <P>made with <i class="fa fa-heart"></i> by
                         <a target="_blank" href="http://mortezaaghili.github.io/">Morteza Aghili</a> | Designed by
@@ -102,7 +102,7 @@
     <script>
         $('.countdown').ClassyCountdown({
             theme: "red",
-            end: $.now() + 10000
+            end: 1512111600000
         });
     </script>
 </body>
