--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h1><i class="fa fa-clock-o" style="color:white"></i></h1>
-                        <h2>your awesome site</h2>
-                        <p>a coming soon template
+                        <h2>Pallman.us</h2>
+                        <p>Coming Soon™
                         </p>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h3>Subscribe for update</h3>
+                    <!--<h3>Subscribe for update</h3>
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Email">
                         <span class="input-group-btn">
@@ -64,6 +64,7 @@
                         </span>
                     </div>
                     <br>
+                  -->
                     <ul class="list-unstyled list-inline">
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
