--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YAX Coming Soon HTML5/CSS3 Free Template</title>
     <meta name="description" content="YAX Coming Soon HTML5/CSS3 Free Template by Morteza Aghili" />
-    <meta name="keywords" content="HTML5, css3, Free Template, web design, flat design, inspiration, responsive, svg, pseudo-elements" />
+    <meta name="keywords" content="HTML5, css3, Free Template, Web design, flat design, inspiration, responsive, svg, pseudo-elements" />
     <meta name="author" content="Morteza Aghili" />
 
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
@@ -29,8 +29,8 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h1><i class="fa fa-clock-o" style="color:white"></i></h1>
-                        <h2>your awesome site</h2>
-                        <p>a coming soon template
+                        <h2>Your Awesome Site</h2>
+                        <p>A Coming Soon Template
                         </p>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <p>2015 - YourAwesomeSite</p>
+                    <p> &#169; 2020 - YourAwesomeSite</p>
 
                     <P>made with <i class="fa fa-heart"></i> by
                         <a target="_blank" href="http://mortezaaghili.github.io/">Morteza Aghili</a> | Designed by
