added favicons to yur site

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="js/jquery.knob.js"></script>
     <script src="js/jquery.throttle.js"></script>
 
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png"  href="img/clockfavicon.png">
 </head>
 
 <body>
